# nifpga-rs

./: readme.md
nifpga/: Cargo.toml
nifpga-sys/: Cargo.toml
nifpga-sys/src/: lib.rs
nifpga-type-macro/: Cargo.toml
nifpga-type-macro/src/: lib.rs
nifpga/src/: datatype.rs  elements.rs  error.rs  fifo.rs  irq.rs  lib.rs  session.rs
