[package]
name = "nifpga-sys"
version = "0.1.1"
authors = ["David Taylor <david.baker.taylor@gmail.com>"]
edition = "2018"
description = "bindings to NI FPGA C API"
license = "MIT"
repository = "https://github.com/dbtaylor/nifpga-rs"

[dependencies]
libc = "0.2.71"

[features]
default = []
static = []