[package]
name = "nifpga-type-macro"
version = "0.1.1"
authors = ["David Taylor <david.baker.taylor@gmail.com>"]
edition = "2018"
description = "helper macro for nifpga datatype"
license = "MIT"
repository = "https://github.com/dbtaylor/nifpga-rs"

[dependencies]
proc-macro2 = "1.0.17"
syn = {version = "1.0.27", features = ["full"]}
quote = "1.0.6"

[lib]
proc-macro = true